tests/positive/invoke_check_flag/input.ci
// Test: cimple -c <file> and cimple --check <file> output "OK" and exit 0
void main() {
    int x = 42;
    print(toString(x) + "\n");
}
