tests/negative/runtime/exec_missing_env_separator/input.ci
void main() {
    ExecResult r = exec(["echo", "hi"], ["BROKEN"]);
    print(toString(execStatus(r)) + "\n");
}
